--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "commander": "^2.11.0",
     "jstransformer-markdown-it": "^2.0.0",
     "merge2": "^1.1.0",
+    "node-sass": "^4.7.1",
     "postcss": "^6.0.6",
     "prismjs": "^1.6.0",
     "pug": "^2.0.0-rc.2",
